<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".TimerForWork">
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textview_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/countdowntime"
        android:textColor="@color/colorAccent"
        android:textSize="70sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_start_timer"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_background"
            android:text="@string/startcountdown"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTransparentWhite" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/spinner_text"
                android:layout_width="124dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/spinner_text"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="17sp" />

            <Spinner
                android:id="@+id/timer_spinner"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:entries="@array/minutes" />
            <Button
                android:id="@+id/button_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/apply"
                android:background="@drawable/button_background"
                android:textColor="@color/colorTransparentWhite"
                />
        </LinearLayout>
        <Button
            android:id="@+id/button_reset_timer"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTransparentWhite"
            android:background="@drawable/button_background"
            android:text="@string/resetcountdown"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>

</RelativeLayout>