<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="284dp"
                android:layout_height="115dp"
                android:fontFamily="@font/lobster"
                android:paddingTop="20dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="70dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textAlignment="center"
                android:textColor="@color/colorTransparentWhite"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="503dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_weight="3"
        android:padding="20dp"
        android:background="@drawable/gridbackground"
        android:columnCount="2"
        android:rowCount="2">
<androidx.cardview.widget.CardView
    android:id="@+id/movieCard"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    app:cardCornerRadius="13dp"
    android:layout_margin="10dp"
    android:elevation="4dp"
    android:layout_width="0dp"
    android:layout_height="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linearcardbg"
        android:orientation="vertical"
        android:weightSum="3">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"

            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/movie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/movie"
            android:textColor="@color/colorTransparentWhite"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/speechCard"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"

            app:cardCornerRadius="13dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linearcardbg"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"

                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/speak" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/speech"
                    android:textColor="@color/colorTransparentWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/gameCard"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"

            app:cardCornerRadius="13dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linearcardbg"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"

                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/game" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/game"
                    android:textColor="@color/colorTransparentWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/timerCard"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"

            app:cardCornerRadius="13dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/linearcardbg"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"

                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/game" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/timer"
                    android:textColor="@color/colorTransparentWhite"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</LinearLayout>