<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D2262938"
    tools:context=".TicTacToeGame">
<RelativeLayout
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textview_playerfirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstplayer"
        android:paddingLeft="5dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:freezesText="true"
        />

    <TextView
        android:id="@+id/textview_playersecond"
        android:layout_width="wrap_content"
        android:text="@string/secondplayer"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/textview_playerfirst"
        android:layout_height="wrap_content"
        android:freezesText="true"
        />

    <Button
        android:id="@+id/button_restart"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="22dp"
        android:background="@drawable/button_background"
        android:text="@string/restartgame"
        android:textColor="@color/colorWhite"
        android:textSize="17sp" />
</RelativeLayout>
    <GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
    android:rowCount="3">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="60sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:textColor="@color/colorAccent"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:freezesText="true"
            />
        <Button
        android:id="@+id/button_01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="60sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
        android:textColor="@color/colorAccent"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:freezesText="true"
        />

    <Button
        android:id="@+id/button_02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="60sp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:freezesText="true"
        />

    <Button
        android:id="@+id/button_10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="60sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:layout_column="0"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:freezesText="true"
        />
        <Button
            android:id="@+id/button_11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:textSize="60sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:textColor="@color/colorAccent"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:freezesText="true"
            />
        <Button
            android:id="@+id/button_12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:background="@color/colorPrimaryDark"
            android:textSize="60sp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:textColor="@color/colorAccent"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:freezesText="true"
            />
        <Button
            android:id="@+id/button_20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:textSize="60sp"
            android:layout_marginEnd="7dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="7dp"
            android:textColor="@color/colorAccent"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:freezesText="true"
            />
        <Button
            android:id="@+id/button_21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:textSize="60sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:layout_rowWeight="1"
            android:freezesText="true"
            />
        <Button
            android:id="@+id/button_22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="2"
            android:textSize="60sp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:textColor="@color/colorAccent"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowWeight="1"
            android:freezesText="true"
            />

</GridLayout>

</LinearLayout>